@@ -8,6 +8,7 @@ import ru.alvisid.pacs.model.Employee;
 import ru.alvisid.pacs.model.WeekDay;
 import ru.alvisid.pacs.repository.EmployeeRepository;
 import ru.alvisid.pacs.repository.impl.DataJpaEmployeeRepositoryImpl;
+import ru.alvisid.pacs.repository.loader.EnumLoader;
 import ru.alvisid.pacs.service.EmployeeService;
 import ru.alvisid.pacs.service.impl.EmployeeServiceImpl;
 
@@ -21,14 +22,17 @@ import static org.slf4j.LoggerFactory.getLogger;
 public class Main {
     private static final Logger log = getLogger(Main.class);
 
+    //--illegal-access=warn
+
     public static void main(String[] args) {
         log.debug("In method Main");
         ConfigurableApplicationContext appCtx = new ClassPathXmlApplicationContext();
-        appCtx.getEnvironment().setActiveProfiles("hsqldb");
         ((ClassPathXmlApplicationContext) appCtx).setConfigLocations("spring/spring-db.xml", "spring/spring-app.xml");
+        appCtx.getEnvironment().setActiveProfiles("postgres");
         appCtx.refresh();
         //ConfigurableApplicationContext appCtx = new ClassPathXmlApplicationContext();
         System.out.println("Bean definition names: " + Arrays.toString(appCtx.getBeanDefinitionNames()));
+        //EnumLoader enumLoader = (EnumLoader) appCtx.getBean(EnumLoader.class);
         Enum[] days = WeekDay.values();
         System.out.println(days.length + "\n");
         for (Enum e : days) {
@@ -45,7 +49,7 @@ public class Main {
         System.out.println(LocalDateTime.of(LocalDate.now(), LocalTime.of(0, 0)));
         EmployeeService employeeService = (EmployeeServiceImpl)appCtx.getBean(EmployeeServiceImpl.class);
         System.out.println(employeeService);
-        Employee employeeN = employeeService.get(10003);
+        Employee employeeN = employeeService.get(10000);
         System.out.println(employee);
         System.out.println(employeeN);
 
